Main.sh to make pulls

--- a/app.json
+++ b/app.json
@@ -3,5 +3,5 @@
     "description": "Node.js Ultraviolet instance",
     "repository": "https://github.com/sillyangel/f3ngine",
     "logo": "https://raw.githubusercontent.com/sillyangel/f3ngine-static/3d5be3846b5238b712e17257b44a11a6163f27ef/logo.png",
-    "keywords": ["tomp", "ultraviolet"]
+    "keywords": ["tomp", "ultraviolet", "F3ngine"]
 }
