--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "bare-server-node": "github:tomphttp/bare-server-node",
     "node-static": "^0.7.11"
   },
-  "name": "F3NGINE",
+  "name": "F3NGINE dev mode",
   "version": "1.1.0",
-  "description": "F3NGINE instance",
+  "description": "F3NGINE dev",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
